--- a/apps/accounts/templates/accounts/user_login.html
+++ b/apps/accounts/templates/accounts/user_login.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <title>Sesapi-PI Login</title>
+    <title>LICAMB Login</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
