--- a/templates/base.html
+++ b/templates/base.html
@@ -161,7 +161,7 @@
         </div>
         <footer class="sticky-footer bg-gradient-light">
             <div class="container my-auto">
-                <div class="text-center my-auto copyright bg-color-danger"><span>Copyright © - {% now 'Y' %}</span></div>
+                <div class="text-center my-auto copyright bg-color-danger"><span><strong>Secretaria de Meio Ambiente</strong> - Senhor do Bonfim - {% now 'Y' %}</span></div>
             </div>
         </footer>
     </div>
