--- a/templates/base.html
+++ b/templates/base.html
@@ -148,7 +148,7 @@
                                     <a class="dropdown-item fa fa-list" href="#">
                                         Outras informações</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item fa fa-sign-out" href="#"> Sair</a>
+                                    <a class="dropdown-item" href="{% url 'accounts:user_logout' %}"><i class="fa fa-window-close"></i> Sair</a>
                                 </div>
                             </li>
                             {% endif %}
