Criada a opção de adicionar usuário pelo sistema

--- a/apps/accounts/templates/accounts/user_login.html
+++ b/apps/accounts/templates/accounts/user_login.html
@@ -36,11 +36,12 @@
         {% csrf_token %}
         <h1 class="h3 mb-3 font-weight-normal">Login</h1>
         <label for="username" class="sr-only">Usuário</label>
-        <input type="text" id="username" name="username" class="form-control" placeholder="Nome de usuário" required autofocus>
+        <input type="text" id="username" name="username" class="form-control" placeholder="Informe o e-mail de usuário" required autofocus>
         <label for="password" class="sr-only">Senha</label>
         <input type="password" id="password" name="password" class="form-control" placeholder="Digite sua senha" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-        <a href="#" class="btn btn-lg btn-info btn-block" type="submit">Criar conta</a>
+        <a href="{% url 'accounts:add_user' %}" class="btn btn-lg btn-info btn-block" type="submit">Criar conta</a>
+
     </form>
 </body>
 </html>
