Cadastro de Tipologias

--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,7 @@
                         <div class="bg-white py-2 collapse-inner rounded">
                             <h6 class="collapse-header">Menu de opções:</h6>
                             <a class="collapse-item" href="{% url 'tipologias:listar_tipologias' %}"><strong>Listagem</strong></a>
-                            <a class="collapse-item" href="#">Cadastro</a>
+                            <a class="collapse-item" href="{% url 'tipologias:adicionar_tipologia' %}">Cadastro</a>
                         </div>
                     </div>
                 </li>
