--- a/apps/tipologias/templates/tipologias/listar_tipologias.html
+++ b/apps/tipologias/templates/tipologias/listar_tipologias.html
@@ -59,7 +59,7 @@ Listagem de Tipologias
                         </div>
                     </div>
                     <div class="card-footer py-3">
-                        <a class="btn btn-info" href="#"><i
+                        <a class="btn btn-info" href="{% url 'tipologias:adicionar_tipologia' %}"><i
                                 class="fa fa-plus"></i><span> Cadastrar</span></a>             &nbsp;
                         <button type="button" class="btn btn-primary" onClick="history.go(-1)">
                             <i class="fa fa-angle-double-left"></i> Voltar
