--- a/apps/tipologias/templates/tipologias/listar_tipologias.html
+++ b/apps/tipologias/templates/tipologias/listar_tipologias.html
@@ -40,7 +40,7 @@ Listagem de Tipologias
                                 {% for t in form %}
                                 <tr>
                                     <td style="text-align: center; vertical-align: middle;">
-                                        <a href="#">
+                                        <a href="{% url 'tipologias:editar_tipologia' t.id %}">
                                             <i class="fa fa-edit" aria-hidden="true" style="color: blue;"></i>
                                         </a>
                                         <a href="#">
