--- a/apps/tipologias/templates/tipologias/adicionar_tipologia.html
+++ b/apps/tipologias/templates/tipologias/adicionar_tipologia.html
@@ -23,9 +23,9 @@ Cadastro de Tipologia
                         <div class="white-box">
                             <h3 class="box-title m"></h3>
                         </div>
-                        <div class="card-body">
-                            <form id="form" method="POST">
-                                {% csrf_token %}
+                        <form id="form" method="POST">
+                            {% csrf_token %}
+                            <div class="card-body">
                                 <div class="p-3 mb-2 bg-light text-dark">
                                     <div class="row">
                                         <div class="col-md-12">
@@ -49,7 +49,7 @@ Cadastro de Tipologia
                                         </div>
                                     </div>
                                 </div>
-                                 <div class="p-3 mb-2 bg-light text-dark">
+                                <div class="p-3 mb-2 bg-light text-dark">
                                     <div class="row">
                                         <div class="col-md-10">
                                             {{ form.und_medida_desc.errors }}
@@ -63,19 +63,19 @@ Cadastro de Tipologia
                                         </div>
                                     </div>
                                 </div>
-                                <div class="p-3 mb-2 bg-light text-dark">
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <button type="submit" class="btn btn-info"><i class="fa fa-check"></i> Salvar</button>
-                                            &nbsp;
-                                            <button type="button" class="btn btn-primary" onClick="history.go(-1)">
-                                                <i class="fa fa-angle-double-left"></i> Voltar
-                                            </button>
-                                        </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <button type="submit" class="btn btn-info"><i class="fa fa-check"></i> Salvar</button>
+                                        &nbsp;
+                                        <button type="button" class="btn btn-primary" onClick="history.go(-1)">
+                                            <i class="fa fa-angle-double-left"></i> Voltar
+                                        </button>
                                     </div>
                                 </div>
-                            </form>
-                        </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
