--- a/apps/tipologias/templates/tipologias/excluir_tipologia.html
+++ b/apps/tipologias/templates/tipologias/excluir_tipologia.html
@@ -9,7 +9,7 @@ Editar de Tipologias
 {% endblock titulo %}
 
 {% block bread %}
-<a href="{% url 'tipologias:excluir_tipologia' %}">Excluir Tipologia</a>
+<a href="{% url 'tipologias:excluir_tipologia' %}" xmlns="http://www.w3.org/1999/html">Excluir Tipologia</a>
 {% endblock bread %}
 
 {% block content %}
@@ -20,34 +20,29 @@ Editar de Tipologias
                 <div class="container-fluid">
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h2 class="text-info m-0 font-weight-bold"><i class="fa fa-trash"></i> Cadastro de Tipologias</h2>
+                            <h2 class="text-info m-0 font-weight-bold"><i class="fa fa-trash"></i> Excluir Tipologia</h2>
                         </div>
                         <div class="white-box">
                             <h3 class="box-title m"></h3>
                         </div>
                         <div class="card-body">
-                                <div class="p-3 mb-2 bg-light text-dark">
-                                    <div class="card-body">
-                                        <div class="card-header"><h4>Deseja realmente excluir do sistema os dados abaixo:</h4><br>
-                                            <h6>Subgrupo: <strong>{{ form.subgrupo }}</strong></h6>
-                                            <h6>Código: <strong>{{ form.codigo }}</strong></h6>
-                                            <h6>Descrição: <strong>{{ form.descricao }}</strong></h6>
-                                            <h6>Unidade de Medida: <strong>{{ form.und_medida_desc}}</strong></h6>
-                                            <h6>Potencial Poluidor: <strong>{{ form.p_poluidor }}</strong></h6>
-                                        </div>
-                                        <div class="card">
-                                            <div class="card-header">
-                                                <form id="form" method="POST">
-                                                    {% csrf_token %}
-                                                    <button class="btn btn-danger" type="submit"><i class="mdi mdi-delete-forever"></i>Remover</button>
-                                                    <button type="button" class="btn btn-primary" onClick="history.go(-1)">
-                                                        <i class="fa fa-angle-double-left"></i> Voltar</button>
-                                                </form>
-                                            </div>
-                                        </div>
+                            <div class="table-responsive">
+                                <table class="table" width="100%" cellspacing="0">
+                                    <div class="card-header"><h4>Deseja realmente excluir do sistema os dados abaixo:</h4><br>
+                                        <h6>Descrição: <strong>{{ form.codigo }} - {{ form.descricao }}</strong></h6>
+                                        <h6>Unidade de Medida: <strong>{{ form.und_medida_desc}}</strong></h6>
+                                        <h6>Potencial Poluidor: <strong>{{ form.p_poluidor }}</strong></h6>
                                     </div>
-                                </div>
+                                </table>
                             </div>
+                        </div>
+                        <div class="card-header">
+                            <form id="form" method="POST">
+                                {% csrf_token %}
+                                <button class="btn btn-danger" type="submit"><i class="mdi mdi-delete-forever"></i>Remover</button>
+                                <button type="button" class="btn btn-primary" onClick="history.go(-1)">
+                                    <i class="fa fa-angle-double-left"></i> Voltar</button>
+                            </form>
                         </div>
                     </div>
                 </div>
