--- a/apps/tipologias/templates/tipologias/listar_tipologias.html
+++ b/apps/tipologias/templates/tipologias/listar_tipologias.html
@@ -28,30 +28,36 @@ Listagem de Tipologias
                                 <table class="table table-bordered table-striped" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
                                     <tr style="text-align: center">
-                                        <th>Ações</th>
+                                        <th>ID</th>
                                         <th>Código</th>
                                         <th>Descrição</th>
                                         <th>Und. de Medida</th>
                                         <th>Portencial Poluidor</th>
                                         <th>SubGrupo</th>
+                                        <th>Ações</th>
                                     </tr>
                                     </thead>
                                     <tbody>
                                     {% for t in form %}
                                     <tr>
-                                        <td style="text-align: center; vertical-align: middle;">
-                                            <a href="{% url 'tipologias:editar_tipologia' t.id %}">
-                                                <i class="fa fa-edit" aria-hidden="true" style="color: blue;"></i>
-                                            </a>
-                                            <a href="{% url 'tipologias:excluir_tipologia' t.id %}">
-                                                <i class="fa fa-trash" aria-hidden="true" style="color: red;"></i>
-                                            </a>
-                                        </td>
+                                        <td>{{ t.id }}</td>
                                         <td>{{ t.codigo }}</td>
                                         <td>{{ t.descricao }}</td>
                                         <td>{{ t.und_medida_desc }}</td>
-                                        <td>{{ t.p_poluidor }}</td>
-                                        <td>{{ t.subgrupo }}</td>
+                                        {% if t.p_poluidor == None %}
+                                            <td><span> - </span></td>
+                                        {% else %}
+                                            <td>{{ t.p_poluidor }}</td>
+                                        {% endif %}
+                                            <td>{{ t.subgrupo }}</td>
+                                        <td style="text-align: center; vertical-align: middle;">
+                                            <a href="{% url 'tipologias:editar_tipologia' t.id %}">
+                                                <i class="fa fa-edit" aria-hidden="true"></i>
+                                            </a>
+                                            <a href="{% url 'tipologias:excluir_tipologia' t.id %}">
+                                                <i class="fa fa-trash" aria-hidden="true"></i>
+                                            </a>
+                                        </td>
                                     </tr>
                                     {% endfor %}
                                     </tbody>
@@ -64,6 +70,11 @@ Listagem de Tipologias
                             <button type="button" class="btn btn-primary" onClick="history.go(-1)">
                                 <i class="fa fa-angle-double-left"></i> Voltar
                             </button>
+                            <a href="#">
+                                <button type="button" class="btn btn-danger">
+                                    <i class="fa fa-send"></i> Enviar por e-mail
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
