Alterado o title das templates

--- a/apps/divisoes/templates/divisoes/listar_divisoes.html
+++ b/apps/divisoes/templates/divisoes/listar_divisoes.html
@@ -2,9 +2,9 @@
 
 {% load static %}
 
-{% block titulo %}
-Listagem de Vacinas
-{% endblock titulo %}
+{% block title %}
+Listagem de Divisões
+{% endblock title %}
 
 {% block bread %}
 <a href="{% url 'divisoes:listar_divisoes' %}">Listagem de Divisões</a>
