--- a/apps/grupos/templates/grupos/listar_grupos.html
+++ b/apps/grupos/templates/grupos/listar_grupos.html
@@ -2,9 +2,9 @@
 
 {% load static %}
 
-{% block titulo %}
+{% block title %}
 Listagem de Grupos
-{% endblock titulo %}
+{% endblock title %}
 
 {% block bread %}
 <a href="{% url 'grupos:listar_grupos' %}">Listagem de Grupos</a>
