--- a/apps/resolucao/templates/resolucao/adicionar_divisao.html
+++ b/apps/resolucao/templates/resolucao/adicionar_divisao.html
@@ -2,9 +2,9 @@
 
 {% load widget_tweaks %}
 
-{% block titulo %}
+{% block title %}
 Cadastro de Vacinas
-{% endblock titulo %}
+{% endblock title %}
 
 {% block bread %}
 <!--<a href="{% url 'vacinas:adicionar_vacina' %}"> Cadastro de Vacinas</a>-->
