--- a/apps/resolucao/templates/resolucao/listar_divisoes.html
+++ b/apps/resolucao/templates/resolucao/listar_divisoes.html
@@ -2,9 +2,9 @@
 
 {% load static %}
 
-{% block titulo %}
+{% block title %}
 Listagem de Vacinas
-{% endblock titulo %}
+{% endblock title %}
 
 {% block bread %}
 <!--<a href="{% url 'vacinas:listar_vacinas' %}">Listagem de Vacinas</a>-->
