--- a/apps/tipologias/templates/tipologias/editar_tipologia.html
+++ b/apps/tipologias/templates/tipologias/editar_tipologia.html
@@ -4,12 +4,12 @@
 
 {% load static %}
 
-{% block titulo %}
-Editar de Tipologias
-{% endblock titulo %}
+{% block title %}
+Editar Tipologia
+{% endblock title %}
 
 {% block bread %}
-<a href="{% url 'tipologias:editar_tipologia' %}">Editar de Tipologia</a>
+<a href="{% url 'tipologias:editar_tipologia' %}">Editar Tipologia</a>
 {% endblock bread %}
 
 {% block content %}
