--- a/apps/tipologias/templates/tipologias/excluir_tipologia.html
+++ b/apps/tipologias/templates/tipologias/excluir_tipologia.html
@@ -4,9 +4,9 @@
 
 {% load static %}
 
-{% block titulo %}
-Editar de Tipologias
-{% endblock titulo %}
+{% block title %}
+Excluir Tipologia
+{% endblock title %}
 
 {% block bread %}
 <a href="{% url 'tipologias:excluir_tipologia' %}" xmlns="http://www.w3.org/1999/html">Excluir Tipologia</a>
