--- a/apps/tipologias/templates/tipologias/listar_tipologias.html
+++ b/apps/tipologias/templates/tipologias/listar_tipologias.html
@@ -2,9 +2,9 @@
 
 {% load static %}
 
-{% block titulo %}
+{% block title %}
 Listagem de Tipologias
-{% endblock titulo %}
+{% endblock title %}
 
 {% block bread %}
 <a href="{% url 'tipologias:listar_tipologias' %}">Listagem de Tipologias</a>
