--- a/apps/subgrupos/templates/subgrupos/listar_subgrupos.html
+++ b/apps/subgrupos/templates/subgrupos/listar_subgrupos.html
@@ -2,9 +2,9 @@
 
 {% load static %}
 
-{% block titulo %}
+{% block title %}
 Listagem de Subgrupos
-{% endblock titulo %}
+{% endblock title %}
 
 {% block bread %}
 <a href="{% url 'subgrupos:listar_subgrupos' %}">Listagem de Subgrupos</a>
