--- a/templates/index.html
+++ b/templates/index.html
@@ -3,64 +3,52 @@
 {% load static %}
 
 {% block title %}
-SESAPI - Conecta SUS
+Index - LICAMB
 {% endblock title %}
 
 
 {% block content %}
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
-    <title>LICAMB </title>
-</head>
-
-<body>
-<div class="content">
-    <div class="collapse bg-dark" id="navbarHeader">
-        <div class="container">
-            <div class="row">
-<!--                <div class="col-sm-8 col-md-7 py-4">-->
-<!--                    <h4 class="text-white">SESAPI - Conecta SUS</h4>-->
-<!--                    <p class="text-muted">Projeto vacinômetro.-->
-<!--                    </p>-->
-<!--&lt;!&ndash;                    <p class="text-muted">BI, Site e API desenvolvidos por <a class="text-white" href="https://www.fabricadegeniosthe.com.br/" target="_blank">Fábrica de Gênios</a>.&ndash;&gt;-->
-<!--                    </p>-->
-<!--                </div>-->
-<!--                <div class="col-sm-4 offset-md-1 py-4">-->
-<!--                    <h4 class="text-white">Contatos</h4>-->
-<!--                    <ul class="list-unstyled">-->
-<!--                        <li><a href="https://www.instagram.com/fgenios/" target="_blank" class="text-white">Instagram</a></li>-->
-<!--                        <li><a href="https://www.youtube.com/c/FabricadeGeniosTHE/" target="_blank" class="text-white">YouTube</a></li>-->
-<!---->
-<!--                    </ul>-->
+<body id="page-top">
+    <div id="wrapper">
+        <div id="content-wrapper" class="d-flex flex-column">
+            <div id="content">
+                <div class="container-fluid">
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h2 class="text-info m-0 font-weight-bold"><i class="fa fa-paperclip"></i> Documentação para Licenciamento</h2>
+                        </div>
+                        <div class="card-body">
+                            <div class="p-3 mb-2 bg-light text-dark">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="row">
+                                            <div class="col-sm-6">
+                                                <div class="card">
+                                                    <div class="card-body">
+                                                        <h5 class="card-title"><strong>Verificar documentação para Licenciamento</strong></h5>
+                                                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                                        <a href="#" class="btn btn-primary">Ir</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <div class="card">
+                                                    <div class="card-body">
+                                                        <h5 class="card-title"><strong>Enviar documentação para Licenciamento</strong></h5>
+                                                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                                        <a href="#" class="btn btn-primary">Ir</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
-
-
-
-
-
-<!-- Optional JavaScript; choose one of the two! -->
-
-<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-
-<!-- Option 2: Separate Popper and Bootstrap JS -->
-<!--
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
--->
 </body>
-
-
 {% endblock content %}
