Criando a verificacao da documentação de licenciamento

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,7 @@
 
 {% load static %}
 
-{% block title %}
-Index - LICAMB
-{% endblock title %}
-
+{% block title %}Index - LICAMB{% endblock title %}
 
 {% block content %}
 <body id="page-top">
@@ -27,7 +24,7 @@ Index - LICAMB
                                                     <div class="card-body">
                                                         <h5 class="card-title"><strong>Verificar documentação para Licenciamento</strong></h5>
                                                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                                                        <a href="#" class="btn btn-primary">Ir</a>
+                                                        <a href="{% url 'licenciamentos:verifica_doc_licenciamento' %}" class="btn btn-primary">Ir</a>
                                                     </div>
                                                 </div>
                                             </div>
