--- a/templates/404.html
+++ b/templates/404.html
@@ -12,7 +12,7 @@ Erro 400
             <div class="error mx-auto" data-text="404">404</div>
             <p class="lead text-gray-800 mb-5">Página não encontrada</p>
             <p class="text-gray-500 mb-0">Desculpa, a página que você está procurando não existe nesse site.</p>
-            <a href="{% url 'site' %}">&larr; Voltar à página Principal</a>
+            <a href="">&larr; Voltar à página Principal</a>
             <br><br>
             <h6>Caminho acessado: {{ request_path }}</h6>
             <h6>Erro: {{ exception }}</h6>
