--- a/templates/500.html
+++ b/templates/500.html
@@ -12,7 +12,7 @@ Erro 500
         <div class="error mx-auto" data-text="500">500</div>
         <p class="lead text-gray-800 mb-5">Erro interno no Servidor</p>
         <p class="text-gray-500 mb-0">Ocorreu um erro no servidor. Entre em contato com o administrador.</p>
-        <a href="{% url 'site' %}">&larr; Voltar à página Principal</a>
+        <a href="">&larr; Voltar à página Principal</a>
     </div>
 </div>
 {% endblock content %}
